<resources>
    <string name="app_name">HempHub Demo 1.0</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered</string>
    <string name="home_page">HOME PAGE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="here_news_will_be_displayed">Here News will be displayed</string>
    <string name="current_and_past_transactions_will_be_here">Current and Past Transactions will be here</string>
    <string name="date">Date</string>
    <string name="current_transaction">Current Transaction</string>
    <string name="account_info_and_settings_will_be_here">Account Info and Settings will be here</string>
    <string name="account_settings">Account Settings</string>
    <string name="generated_qrcode_will_go_here">Generated QRCode will go here</string>
    <string name="logout">LOGOUT</string>
</resources>
