<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorWhite"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/hemphublogo"

        />
    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:hint="Enter Email"
        app:errorEnabled="true"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/edittext_company_name"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_business_black_24dp"
        android:hint="Company Name"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:hint="@string/username"
        android:inputType="text"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        />
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/button_login_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="Register"
        android:enabled="false"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/button_alreadyregistered"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/black"
            android:text="@string/already_registered"
            />
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimary"
            android:text="LOGIN"
            />
    </LinearLayout>


</LinearLayout>